fixe light and z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    z-index: 900;
+    z-index: 800;
     pointer-events: none; /* permet aux événements de souris de passer à travers cet élément */
 }
 .grainy-filter::after {
@@ -77,7 +77,7 @@
     background-color: var(--secondColor);;
     border-radius: 50%;
     pointer-events: none; /* Permettre aux éléments en dessous d'être cliquables */
-    z-index: 800;
+    z-index: 1000;
     transition: transform .2s ease-out;
 }
 
@@ -586,13 +586,8 @@ body{
     align-items: center;
     height: 100%;
     width: 100%;
+    z-index: 800;
 }
-
-/* @media screen and (max-width: 900px){
-    #canvas{
-       display: none;
-    }
-} */
 
 .about-projet{
     display: flex;
@@ -816,7 +811,7 @@ body{
     background-color: #0101011a;
     backdrop-filter: blur(10px);
     border-radius: 20px;
-    z-index: 10;
+    z-index: 900;
     overflow: hidden;
 }
 .progress-bar {
